# xfce4-speed-plugin

./: .gitignore  COPYING  README.md  configure.ac.in  configure~
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/32x32/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  commandline.c  net.c  net.h  netload.c  netload.desktop.in.in  os.h  speed.c  speed.desktop.in.in  utils.c  wormulon.h
panel-plugin/wormulon/: linux.h
po/: POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  (+15 more)
